<resources>
    <string name="app_name">Quiz App</string>

    <string name="sample_question">What are you doing? Choose from one of the options</string>

    <string name="question_count">Count: %d of %d</string>
    <string name="question_score">You guessed: %d out of %d questions correct!</string>
    <string name="score">Score: %d Of %d</string>
    <string name="submit_question_button_text">Submit Answer</string>
    <string name="restart_quiz_button_text">Restart Quiz</string>
    <string name="start_quiz_button_text">Start Quiz</string>
    <string name="no_options_selected_message">Please Select an option!!</string>
    <string name="submit_button_text">Submit Button</string>

    <string name="mathematics_category_text">Mathematics</string>
    <string name="science_category_text">Science</string>
    <string name="gk_category_text">General Knowledge</string>
    <string name="android_category_text">Android</string>
    <string name="timeout_second_text">%d secs</string>

    <string name="history_fragment_text">Hello History fragment</string>
    <string name="profile_fragment_text">Hello Profile fragment</string>

</resources>