<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--        Why we needed to have import the enum class here?-->
        <import type="com.example.quizapp.enums.QuizCategory" />

        <variable
            name="fragment"
            type="com.example.quizapp.fragments.quiz.StartFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.quiz.StartFragment">


        <Button
            android:id="@+id/quiz_mathematics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.goToNextScreen(QuizCategory.MATHEMATICS)}"
            android:text="@string/mathematics_category_text"
            app:layout_constraintBottom_toTopOf="@+id/quiz_science"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/quiz_science"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.goToNextScreen(QuizCategory.SCIENCE)}"
            android:text="@string/science_category_text"
            app:layout_constraintBottom_toTopOf="@+id/quiz_gk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_mathematics" />

        <Button
            android:id="@+id/quiz_gk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.goToNextScreen(QuizCategory.GENERAL_KNOWLEDGE)}"
            android:text="@string/gk_category_text"
            app:layout_constraintBottom_toTopOf="@+id/quiz_android"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_science" />

        <Button
            android:id="@+id/quiz_android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.goToNextScreen(QuizCategory.ANDROID)}"
            android:text="@string/android_category_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_gk" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>