<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.quizapp.fragments.ResultFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/sides_margin"
        tools:context=".fragments.ResultFragment">

        <TextView
            android:id="@+id/question_score"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/question_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/question_score" />


        <View
            android:id="@+id/question_divider"
            style="@style/Widget.QuizApp.Divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_score" />

        <TextView
            android:id="@+id/score"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/sides_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_divider"
            tools:text="@string/score" />

        <View
            android:id="@+id/score_button_divider"
            style="@style/Widget.QuizApp.Divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score" />

        <Button
            android:id="@+id/next_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/restart_quiz_button_text"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> fragment.restartQuiz()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_button_divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>